# cppipe

./: .gitignore  CMakeLists.txt  README  README.md
.github/workflows/: master.yml
cmake/: cppipeConfig.cmake.in  cppipeInstall.cmake  cppipePack.cmake
include/: cppipe.h
test/: CMakeLists.txt  test_inc_in_pipe.cpp  test_simple_failure.cpp  test_string_lvalue.cpp  test_string_rvalue.cpp  test_suite.cpp
